--- a/application/public/html/postvideo.html
+++ b/application/public/html/postvideo.html
@@ -1,51 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Post</title>
-  </head>
-  <body>
-    <h1>YouTube &trade;</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">CYC</a></li>
-        <li><a href="login.html">Login</a></li>
-        <li><a href="register.html">Register</a></li>
-        <li><a href="postvideo.html">Post</a></li>
-        <li><a href="viewpost.html">View</a></li>
-      </ul>
-    </nav>
-    <section>
-      <form action="viewpost.html">
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required />
 
-        <label for="description">Description:</label>
-        <input type="text" id="description" name="description" required />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Post</title>
+</head>
 
-        <label for="video">Video:</label>
-        <input type="file" id="video" name="video" required />
+<body>
+  <h1>YouTube &trade;</h1>
+  <nav>
+    <ul>
+      <li><a href="index.html">CYC</a></li>
+      <li><a href="login.html">Login</a></li>
+      <li><a href="register.html">Register</a></li>
+      <li><a href="postvideo.html">Post</a></li>
+      <li><a href="viewpost.html">View</a></li>
+    </ul>
+  </nav>
+  <section>
+    <form action="viewpost.html">
+      <label for="title">Title:</label>
+      <input type="text" id="title" name="title" required />
 
-        <label
-          for="Acceptable Use Policy for uploading videos.
-"
-          ><a href="#">Acceptable Use Policy for uploading videos </a></label
-        >
-        <input type="checkbox" id="age" name="age" required />
+      <label for="description">Description:</label>
+      <input type="text" id="description" name="description" required />
 
-        <input type="submit" value="Post" />
-        <button type="reset">Clear</button>
-      </form>
-    </section>
-    <footer>
-      <p>&copy; 2024 Your Application Name. All Rights Reserved.</p>
-      <ul>
-        <li><a href="https://www.linkedin.com/in/anshaj-vats/">LinkdIn</a></li>
-        <li><a href="https://github.com/AnshajVats">Github</a></li>
-        <li><a href="login.html">Contact</a></li>
-        <li>avats@sfsu.edu</li>
-      </ul>
-    </footer>
-  </body>
+      <label for="video">Video:</label>
+      <input type="file" id="video" name="video" required />
+
+      <label for="Acceptable Use Policy for uploading videos.
+"><a href="#">Acceptable Use Policy for uploading videos </a></label>
+      <input type="checkbox" id="age" name="age" required />
+
+      <input type="submit" value="Post" />
+      <button type="reset">Clear</button>
+    </form>
+  </section>
+  <footer>
+    <p>&copy; 2024 Your Application Name. All Rights Reserved.</p>
+    <ul>
+      <li><a href="https://www.linkedin.com/in/anshaj-vats/">LinkdIn</a></li>
+      <li><a href="https://github.com/AnshajVats">Github</a></li>
+      <li><a href="login.html">Contact</a></li>
+      <li>avats@sfsu.edu</li>
+    </ul>
+  </footer>
+</body>
+
 </html>
