applied Css for all the 5 pages

--- a/application/public/html/index.html
+++ b/application/public/html/index.html
@@ -4,40 +4,202 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="../css/index.css" />
   <title>CYC</title>
 </head>
 
 <body>
-  <Header>
-    <h1>YouTube&trade;
-  </Header>
-  <nav>
-    <ul>
-      <li><a href="index.html">CYC</a></li>
-      <li><a href="login.html">Login</a></li>
-      <li><a href="register.html">Register</a></li>
-      <li><a href="postvideo.html">Post</a></li>
-      <li><a href="viewpost.html">View</a></li>
-    </ul>
-  </nav>
+  <div class="topBar">
+    <Header>
+      <a href="index.html">
+        <img src="../assets/icon/Youtube.png" alt="Youtube">
+        <h1>YouTube </h1>
+      </a>
+    </Header>
+    <section class="searchKeyWords">
+      <input type="text" placeholder="Search..." required />
+      <img src="../assets/icon/SearchImage.png" alt="Youtube">
+    </section>
+    <nav class="navbar">
+      <a href="index.html" class="navLink">Home</a>
+      <a href="login.html" class="navLink"><img src="../assets/icon/Login.svg" alt="loginLogo">
+        Login</a>
+      <a href="register.html" class="navLink">Register</a>
+      <a href="postvideo.html" class="navLink">Post</a>
+      <a href="viewpost.html" class="navLink"> viewPost</a>
+    </nav>
+  </div>
+  <div class="videos">
+    <!-- Video content starts here -->
+    <a href="viewpost.html">
+      <div class="video">
+        <div class="thumbnail">
+          <img src="../assets/tumbnails/Picture1.png" alt="tumbnail1" />
+        </div>
+
+        <div class="details">
+          <div class="author">
+            <img src="../assets/Logo/FirstLogo.png" alt="" />
+          </div>
+          <div class="title">
+            <h3>
+              How to live life to the fullest
+            </h3>
+            <a href="">
+              Channel name
+            </a>
+            <span> 2M Views • 3 Months Ago </span>
+          </div>
+        </div>
+      </div>
+      <!-- the content end here rest is just repeat -->
+      <div class="video">
+        <div class="thumbnail">
+          <img src="../assets/tumbnails/Picture1.png" alt="tumbnail1" />
+        </div>
+
+        <div class="details">
+          <div class="author">
+            <img src="../assets/Logo/FirstLogo.png" alt="" />
+          </div>
+          <div class="title">
+            <h3>
+              How to live life to the fullest
+            </h3>
+            <a href="">
+              Channel name
+            </a>
+            <span> 2M Views • 3 Months Ago </span>
+          </div>
+        </div>
+      </div>
+      <div class="video">
+        <div class="thumbnail">
+          <img src="../assets/tumbnails/Picture1.png" alt="tumbnail1" />
+        </div>
+
+        <div class="details">
+          <div class="author">
+            <img src="../assets/Logo/FirstLogo.png" alt="" />
+          </div>
+          <div class="title">
+            <h3>
+              How to live life to the fullest
+            </h3>
+            <a href="">
+              Channel name
+            </a>
+            <span> 2M Views • 3 Months Ago </span>
+          </div>
+        </div>
+      </div>
+      <div class="video">
+        <div class="thumbnail">
+          <img src="../assets/tumbnails/Picture1.png" alt="tumbnail1" />
+        </div>
+
+        <div class="details">
+          <div class="author">
+            <img src="../assets/Logo/FirstLogo.png" alt="" />
+          </div>
+          <div class="title">
+            <h3>
+              How to live life to the fullest
+            </h3>
+            <a href="">
+              Channel name
+            </a>
+            <span> 2M Views • 3 Months Ago </span>
+          </div>
+        </div>
+      </div>
+      <div class="video">
+        <div class="thumbnail">
+          <img src="../assets/tumbnails/Picture1.png" alt="tumbnail1" />
+        </div>
+
+        <div class="details">
+          <div class="author">
+            <img src="../assets/Logo/FirstLogo.png" alt="" />
+          </div>
+          <div class="title">
+            <h3>
+              How to live life to the fullest
+            </h3>
+            <a href="">
+              Channel name
+            </a>
+            <span> 2M Views • 3 Months Ago </span>
+          </div>
+        </div>
+      </div>
+      <div class="video">
+        <div class="thumbnail">
+          <img src="../assets/tumbnails/Picture1.png" alt="tumbnail1" />
+        </div>
+
+        <div class="details">
+          <div class="author">
+            <img src="../assets/Logo/FirstLogo.png" alt="" />
+          </div>
+          <div class="title">
+            <h3>
+              How to live life to the fullest
+            </h3>
+            <a href="">
+              Channel name
+            </a>
+            <span> 2M Views • 3 Months Ago </span>
+          </div>
+        </div>
+      </div>
+      <div class="video">
+        <div class="thumbnail">
+          <img src="../assets/tumbnails/Picture1.png" alt="tumbnail1" />
+        </div>
+
+        <div class="details">
+          <div class="author">
+            <img src="../assets/Logo/FirstLogo.png" alt="" />
+          </div>
+          <div class="title">
+            <h3>
+              How to live life to the fullest
+            </h3>
+            <a href="">
+              Channel name
+            </a>
+            <span> 2M Views • 3 Months Ago </span>
+          </div>
+        </div>
+      </div>
+
+      <div class="video">
+        <div class="thumbnail">
+          <img src="../assets/tumbnails/Picture1.png" alt="tumbnail1" />
+        </div>
+
+        <div class="details">
+          <div class="author">
+            <img src="../assets/Logo/FirstLogo.png" alt="" />
+          </div>
+          <div class="title">
+            <h3>
+              How to live life to the fullest
+            </h3>
+            <a href="">
+              Channel name
+            </a>
+            <span> 2M Views • 3 Months Ago </span>
+          </div>
+        </div>
+      </div>
+    </a>
+  </div>
   <section>
-    <h2>Main Content</h2>
-    <p>This is where youtube video will appear</p>
+    <h2>Future plans with time SideNavbar</h2>
+    <p>If I get time side navbar where you will have: playlist, trending, podcast, gaming .....</p>
   </section>
 </body>
-<section>
-  <h2>Future plans with time SideNavbar</h2>
-  <p>If I get time side navbar where you will have: playlist, trending, podcast, gaming .....</p>
-</section>
-<footer>
-  <p>&copy; 2024 Your Application Name. All Rights Reserved.</p>
-  <ul>
-    <li><a href="https://www.linkedin.com/in/anshaj-vats/">LinkdIn</a></li>
-    <li><a href="https://github.com/AnshajVats">Github</a></li>
-    <li><a href="login.html">Contact</a></li>
-    <li>avats@sfsu.edu</li>
-
-  </ul>
-</footer>
 
 </html>
