--- a/application/public/html/viewpost.html
+++ b/application/public/html/viewpost.html
@@ -22,8 +22,7 @@
     </section>
     <nav class="navbar">
       <a href="index.html" class="navLink">Home</a>
-      <a href="login.html" class="navLink"><img src="../assets/icon/Login.svg" alt="loginLogo">
-        Login</a>
+      <a href="login.html" class="navLink">Login</a>
       <a href="register.html" class="navLink">Register</a>
       <a href="postvideo.html" class="navLink">Post</a>
       <a href="viewpost.html" class="navLink"> viewPost</a>
