--- a/application/public/html/postvideo.html
+++ b/application/public/html/postvideo.html
@@ -34,7 +34,7 @@
         <h2 class="title">Upload Video</h2>
 
         <div class="inputField">
-          <label for="title">Title:</label>
+          <label for="titleText">Title:</label>
           <input type="text" id="title" name="title" required />
         </div>
         <div class="inputField">
