Added confirm password

--- a/application/public/html/register.html
+++ b/application/public/html/register.html
@@ -44,6 +44,10 @@
           <img src="../assets/icon/Lock.svg" alt="Lock">
           <input type="password" placeholder="Password">
         </div>
+        <div class="inputField">
+          <img src="../assets/icon/Lock.svg" alt="Lock">
+          <input type="password" placeholder=" Confirm Password">
+        </div>
         <div class="inputFieldAge">
           <label for="age">Are you 13 years or older?</label>
           <input type="checkbox" id="age" name="age" required />
