--- a/application/public/html/index.html
+++ b/application/public/html/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" type="text/css" href="../css/index.css" />
+  <script src="../js/index.js"></script>
   <title>CYC</title>
 </head>
 
@@ -28,177 +29,14 @@
       <a href="viewpost.html" class="navLink"> viewPost</a>
     </nav>
   </div>
-  <div class="videos">
-    <!-- Video content starts here -->
-    <a href="viewpost.html">
-      <div class="video">
-        <div class="thumbnail">
-          <img src="../assets/tumbnails/Picture1.png" alt="tumbnail1" />
-        </div>
-
-        <div class="details">
-          <div class="author">
-            <img src="../assets/Logo/FirstLogo.png" alt="" />
-          </div>
-          <div class="title">
-            <h3>
-              How to live life to the fullest
-            </h3>
-            <a href="">
-              Channel name
-            </a>
-            <span> 2M Views • 3 Months Ago </span>
-          </div>
-        </div>
-      </div>
-      <!-- the content end here rest is just repeat -->
-      <div class="video">
-        <div class="thumbnail">
-          <img src="../assets/tumbnails/Picture1.png" alt="tumbnail1" />
-        </div>
-
-        <div class="details">
-          <div class="author">
-            <img src="../assets/Logo/FirstLogo.png" alt="" />
-          </div>
-          <div class="title">
-            <h3>
-              How to live life to the fullest
-            </h3>
-            <a href="">
-              Channel name
-            </a>
-            <span> 2M Views • 3 Months Ago </span>
-          </div>
-        </div>
-      </div>
-      <div class="video">
-        <div class="thumbnail">
-          <img src="../assets/tumbnails/Picture1.png" alt="tumbnail1" />
-        </div>
-
-        <div class="details">
-          <div class="author">
-            <img src="../assets/Logo/FirstLogo.png" alt="" />
-          </div>
-          <div class="title">
-            <h3>
-              How to live life to the fullest
-            </h3>
-            <a href="">
-              Channel name
-            </a>
-            <span> 2M Views • 3 Months Ago </span>
-          </div>
-        </div>
-      </div>
-      <div class="video">
-        <div class="thumbnail">
-          <img src="../assets/tumbnails/Picture1.png" alt="tumbnail1" />
-        </div>
-
-        <div class="details">
-          <div class="author">
-            <img src="../assets/Logo/FirstLogo.png" alt="" />
-          </div>
-          <div class="title">
-            <h3>
-              How to live life to the fullest
-            </h3>
-            <a href="">
-              Channel name
-            </a>
-            <span> 2M Views • 3 Months Ago </span>
-          </div>
-        </div>
-      </div>
-      <div class="video">
-        <div class="thumbnail">
-          <img src="../assets/tumbnails/Picture1.png" alt="tumbnail1" />
-        </div>
-
-        <div class="details">
-          <div class="author">
-            <img src="../assets/Logo/FirstLogo.png" alt="" />
-          </div>
-          <div class="title">
-            <h3>
-              How to live life to the fullest
-            </h3>
-            <a href="">
-              Channel name
-            </a>
-            <span> 2M Views • 3 Months Ago </span>
-          </div>
-        </div>
-      </div>
-      <div class="video">
-        <div class="thumbnail">
-          <img src="../assets/tumbnails/Picture1.png" alt="tumbnail1" />
-        </div>
-
-        <div class="details">
-          <div class="author">
-            <img src="../assets/Logo/FirstLogo.png" alt="" />
-          </div>
-          <div class="title">
-            <h3>
-              How to live life to the fullest
-            </h3>
-            <a href="">
-              Channel name
-            </a>
-            <span> 2M Views • 3 Months Ago </span>
-          </div>
-        </div>
-      </div>
-      <div class="video">
-        <div class="thumbnail">
-          <img src="../assets/tumbnails/Picture1.png" alt="tumbnail1" />
-        </div>
-
-        <div class="details">
-          <div class="author">
-            <img src="../assets/Logo/FirstLogo.png" alt="" />
-          </div>
-          <div class="title">
-            <h3>
-              How to live life to the fullest
-            </h3>
-            <a href="">
-              Channel name
-            </a>
-            <span> 2M Views • 3 Months Ago </span>
-          </div>
-        </div>
-      </div>
-
-      <div class="video">
-        <div class="thumbnail">
-          <img src="../assets/tumbnails/Picture1.png" alt="tumbnail1" />
-        </div>
-
-        <div class="details">
-          <div class="author">
-            <img src="../assets/Logo/FirstLogo.png" alt="" />
-          </div>
-          <div class="title">
-            <h3>
-              How to live life to the fullest
-            </h3>
-            <a href="">
-              Channel name
-            </a>
-            <span> 2M Views • 3 Months Ago </span>
-          </div>
-        </div>
-      </div>
-    </a>
+  <!-- the content end here rest is just repeat -->
+  <p>photo count: <span id="photo_count"></span></p>
+  <div class="videoContainer">
+    <main id="main_content">
+    </main>
   </div>
-  <section>
-    <h2>Future plans with time SideNavbar</h2>
-    <p>If I get time side navbar where you will have: playlist, trending, podcast, gaming .....</p>
-  </section>
+
+
 </body>
 
 </html>
